Fix/work not showing in grader (#191)
* working states but I lowkey broke the grader

* good

* yay

* lint fix

---------

--- a/frontend/src/pages/Grading/Grader/styles.css
+++ b/frontend/src/pages/Grading/Grader/styles.css
@@ -11,6 +11,13 @@
     gap: 10px;
     padding-bottom: 10px;
   }
+  
+  &__loading {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+
   &__title {
     display: flex;
     align-items: stretch;
